# screen-menago

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
Formula/: smenago.rb
src/: config.rs  main.rs  naming.rs  uploader.rs
