[package]
name = "smenago"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Upload screenshots to S3-compatible storage and get a public link"
license = "MIT"
repository = "https://github.com/azranel/screen-menago"
homepage = "https://github.com/azranel/screen-menago"
readme = "README.md"
keywords = ["s3", "r2", "screenshot", "upload", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "smenago"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
mime_guess = "2"
sha2 = "0.10"
chrono = "0.4"
dirs = "5"

[profile.release]
strip = true
lto = "thin"
